--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-       Contact us | Trusted Lawn Care  Services in Lakeland, FL
+        Residental Services in lakeland, fl | Trusted Lawn Care Services in Lakeland, FL
     </title>
 
     <meta name="description" content="">
@@ -46,7 +46,7 @@
                             </p>
                         </div>
                         <a class="text-decoration-underline text-white" title="LFTGU Lawn care Reviews" target="_blank"
-                            href="">
+                            href="https://www.facebook.com/landscapingfromthegroundupLLC/reviews">
                             (14 Rating &
                             Reviews)</a>
                     </div>
@@ -71,11 +71,11 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                Lakeland, FL <br>
+                                Lakeland, FL 33810 <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
-                                    href="">Get
+                                    href="https://www.google.com/maps/place/Kathleen+Rd,+Lakeland,+FL+33810,+USA/@28.0993838,-82.0068839,17z/data=!3m1!4b1!4m6!3m5!1s0x88dd47013863653d:0x173c116da95c1a0!8m2!3d28.0993791!4d-82.004309!16s%2Fg%2F1tq6kwy1?entry=ttu">Get
                                     Directions
                             </span>
                             </a>
@@ -135,29 +135,29 @@
                             <!-- Second Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Lawn Services"
-                                    href="/lawn-services-near-austell-ga.html">Lawn Services</a>
+                                    href="/lawn-care-services-lakeland-fl.html">Lawn Care Services</a>
                             </li>
 
                             <!-- Third Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Mulching"
-                                    href="/mulching-services-lakeland.html">
-                                   Mulching
+                                <a class="nav-link" title="Trimming" href="/tree-trimming.html">
+                                    Tree Trimming services
                                 </a>
                             </li>
 
+
                             <!-- Fourth Navigation -->
+
                             <li class="nav-item">
-                                <a class="nav-link" title="Mowing"
-                                    href="/mowing-services-lakeland.html">Lawn Mowing</a>
+                                <a class="nav-link" title="Residental services"
+                                    href="/residental-services-lakeland-fl.html">Residental services</a>
                             </li>
+
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Trimming"
-                                    href="/tree-trimming.html">
-                                    Trimming
-                                </a>
+                                <a class="nav-link" title="Commercial services"
+                                    href="/commercial-services-lakeland-fl.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -178,14 +178,13 @@
         </nav>
         <!-- /Navbar -->
 
-
         <!-- Hero Section -->
         <div class="hero" data-aos="fade-down">
             <!-- Container for Hero Content -->
             <div class="container hero-content">
 
                 <h1 class="text-center">
-                    Contact Lakeland, FL
+                    Contact LFTGU Lawn care
                 </h1>
                 <!-- Call to Action Buttons -->
                 <div class="d-flex mt-lg-5 mt-4 justify-content-center">
@@ -205,7 +204,7 @@
 
 
         <!-- Background Image behind hero sections -->
-        <img class="hero-img" src="/img/checking-garden.png" alt="Our Lawn Services">
+        <img class="hero-img" src="/img/index-hero.PNG" alt="Our Lawn Services">
     </section>
 
     <!-- Contact Information -->
@@ -214,16 +213,16 @@
             <div class="flex">
                 <!-- Company Info -->
                 <div class="info-section dark-section" data-aos="fade-right">
-                    <h4 class="text-center">Contact Us</h4>
+                    <h4 class="text-center">Contact <br> LFTGU Lawn Care</h4>
                     <ul>
                         <!-- Location -->
                         <p class="unit"> <i class="fa-solid fa-location-dot me-3 fs-28 text-white"></i>
                             <span>
 
                                 Lakeland, FL <br>
-                                Lakeland, FL 30168<br>
+                                Lakeland, FL 33810<br>
                                 <a title="Get LFTGU Lawn care Directions" target="_blank"
-                                    href="">
+                                    href="https://www.google.com/maps/place/Kathleen+Rd,+Lakeland,+FL+33810,+USA/@28.0993791,-82.004309,17z/data=!3m1!4b1!4m6!3m5!1s0x88dd47013863653d:0x173c116da95c1a0!8m2!3d28.0993791!4d-82.004309!16s%2Fg%2F1tq6kwy1?entry=ttu">
                                     Get Directions
                                 </a>
                             </span>
@@ -259,7 +258,7 @@
                 <!-- Map -->
                 <div class="map-section" data-aos="fade-left">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d149905.99664744834!2d-84.78693427606254!3d33.87713940530474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x16b1cfbca210293%3A0x2bbe154cb02a59d3!2sR%26S%20Flores%20Lawn%20Care%20LLC!5e0!3m2!1sen!2snp!4v1706784339464!5m2!1sen!2snp"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3519.5462956785505!2d-82.00430899999999!3d28.0993791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd47013863653d%3A0x173c116da95c1a0!2sKathleen%20Rd%2C%20Lakeland%2C%20FL%2033810%2C%20USA!5e0!3m2!1sen!2snp!4v1718874904324!5m2!1sen!2snp"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
@@ -284,7 +283,7 @@
                     <div class="footer-nav">
                         <p>
                             Lakeland, FL <br>
-                            Lakeland, FL 30168
+                            Lakeland, FL 33810
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
