--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                Lakeland, FL <br>
+                                Lakeland, FL 33810 <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
@@ -150,14 +150,14 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" title="Residental services"
-                                    href="/mowing-services-lakeland.html">Residental services</a>
+                                    href="/residental-services-lakeland-fl.html">Residental services</a>
                             </li>
 
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Commercial services"
-                                    href="/mowing-services-lakeland.html">Commercial services</a>
+                                    href="/commercial-services-lakeland-fl.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -548,7 +548,7 @@
                             </p>
                         </div>
                         <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
+                            <p><i class="fa-brands fa-facebook"></i>Facebook</p>
                         </div>
                     </div>
                     <p class="comment">
@@ -577,7 +577,7 @@
                             </p>
                         </div>
                         <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
+                            <p><i class="fa-brands fa-facebook"></i>Facebook</p>
                         </div>
                     </div>
                     <p class="comment">
@@ -606,7 +606,7 @@
                             </p>
                         </div>
                         <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
+                            <p><i class="fa-brands fa-facebook"></i>Facebook</p>
                         </div>
                     </div>
                     <p class="comment">
@@ -633,7 +633,7 @@
                             </p>
                         </div>
                         <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
+                            <p><i class="fa-brands fa-facebook"></i>Facebook</p>
                         </div>
                     </div>
                     <p class="comment">
@@ -699,7 +699,7 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br> 30168
+                            Lakeland, FL <br> 33810
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
