--- a/lawn-care-services-lakeland-fl.html
+++ b/lawn-care-services-lakeland-fl.html
@@ -71,7 +71,7 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                Lakeland, FL <br>
+                                Lakeland, FL 33810 <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
@@ -150,14 +150,14 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" title="Residental services"
-                                    href="/mowing-services-lakeland.html">Residental services</a>
+                                    href="/residental-services-lakeland-fl.html">Residental services</a>
                             </li>
 
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Commercial services"
-                                    href="/mowing-services-lakeland.html">Commercial services</a>
+                                    href="/commercial-services-lakeland-fl.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -230,7 +230,7 @@
                     </h2>
                     <p class="mb-4">
 
-                        For dependable lawn care services in Lakeland, FL, look no further. At Reliable Lawn Care, we're
+                        For dependable lawn care services in Lakeland, FL, look no further. At  LFTGU Lawn care  , we're
                         dedicated to maintaining your lawn with professionalism and care. Whether it's lawn mowing, tree
                         trimming, mulching, edging, or shaping, we handle it all to ensure your lawn looks beautiful
                         year-round.
@@ -471,7 +471,7 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br> 30168
+                            Lakeland, FL <br> 33810
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
