--- a/mowing-services-lakeland.html
+++ b/mowing-services-lakeland.html
@@ -71,7 +71,7 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                Lakeland, FL <br>
+                                Lakeland, FL 33810 <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
@@ -150,14 +150,14 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" title="Residental services"
-                                    href="/mowing-services-lakeland.html">Residental services</a>
+                                    href="/residental-services-lakeland-fl.html">Residental services</a>
                             </li>
 
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Commercial services"
-                                    href="/mowing-services-lakeland.html">Commercial services</a>
+                                    href="/commercial-services-lakeland-fl.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -230,7 +230,7 @@
                     </h2>
                     <p class="mb-4">
 
-                        Make your lawn shine with LFTGU Lawn Care. We offer top-notch mowing services to keep your yard
+                        Make your lawn shine with LFTGU Lawn Care. We offer reliable mowing services to keep your yard
                         looking fresh and neat. Whether it's regular mowing, trimming edges, or keeping your grass
                         healthy and green, we handle it all with care.
                         <br><br>
@@ -274,7 +274,7 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br> 30168
+                            Lakeland, FL <br> 33810
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
