--- a/mulching-services-lakeland.html
+++ b/mulching-services-lakeland.html
@@ -71,7 +71,7 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                Lakeland, FL <br>
+                                Lakeland, FL 33810 <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
@@ -150,14 +150,14 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" title="Residental services"
-                                    href="/mowing-services-lakeland.html">Residental services</a>
+                                    href="/residental-services-lakeland-fl.html">Residental services</a>
                             </li>
 
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Commercial services"
-                                    href="/mowing-services-lakeland.html">Commercial services</a>
+                                    href="/commercial-services-lakeland-fl.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -235,7 +235,7 @@
                         it's mulch installation, garden bed maintenance, or soil enrichment, we handle it all with
                         precision and care.
                         <br><br>
-                        Our dedicated team strives for excellent results, so you can enjoy a thriving garden with
+                        Our dedicated team excellent  for excellent results, so you can enjoy a thriving garden with
                         improved soil structure. Contact us today at <a href="tel:+18138093317"
                             class="text-decoration-underline" title="LFTGU Lawn care Contact Info">+1 (813) 809-3317</a>
                             to discover how our mulching services can benefit your landscape!
@@ -277,7 +277,7 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br> 30168
+                            Lakeland, FL <br> 33810
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
