--- a/sidewalk-installation.html
+++ b/sidewalk-installation.html
@@ -71,7 +71,7 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                Lakeland, FL <br>
+                                Lakeland, FL 33810 <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
@@ -150,14 +150,14 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" title="Residental services"
-                                    href="/mowing-services-lakeland.html">Residental services</a>
+                                    href="/residental-services-lakeland-fl.html">Residental services</a>
                             </li>
 
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Commercial services"
-                                    href="/mowing-services-lakeland.html">Commercial services</a>
+                                    href="/commercial-services-lakeland-fl.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -234,7 +234,7 @@
                         your home's appeal with expertly installed sidewalks. Whether it's a new pathway, repairs, or
                         upgrades, we handle it all professionally.
                         <br><br>
-                        Our dedicated team strives for quality results, ensuring your property looks its best. Contact
+                        Our dedicated team excellent  for quality results, ensuring your property looks its best. Contact
                         us today at <a href="tel:+18138093317" class="text-decoration-underline"
                             title="LFTGU Lawn care Contact Info">+1 (813) 809-3317</a>
                             to explore how our Sidewalk Installation Services can add value to your property!
@@ -276,7 +276,7 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br> 30168
+                            Lakeland, FL <br> 33810
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
