--- a/tree-trimming.html
+++ b/tree-trimming.html
@@ -71,7 +71,7 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                Lakeland, FL <br>
+                                Lakeland, FL 33810 <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
@@ -150,14 +150,14 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" title="Residental services"
-                                    href="/mowing-services-lakeland.html">Residental services</a>
+                                    href="/residental-services-lakeland-fl.html">Residental services</a>
                             </li>
 
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Commercial services"
-                                    href="/mowing-services-lakeland.html">Commercial services</a>
+                                    href="/commercial-services-lakeland-fl.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -230,14 +230,14 @@
                     </h2>
                     <p class="mb-4">
 
-                        For professional tree trimming services that make your lawn look fresh, turn to us. At Tree
-                        Trimming Services, we're dedicated to enhancing your yard's appearance. Whether it's shaping
+                        For professional tree trimming services that make your lawn look fresh, turn to us. At LFTGU
+                        Lawn care , we're dedicated to enhancing your yard's appearance. Whether it's shaping
                         trees, clearing branches, or keeping trees healthy, we handle it all with skill.
                         <br><br>
                         Our team aims for excellent results to keep your lawn looking its best. Relax and enjoy your
                         outdoor space knowing it's in good hands. Contact us today at <a href="tel:+18138093317"
                             class="text-decoration-underline" title="LFTGU Lawn care Contact Info">+1 (813) 809-3317</a>
-                            to see how we can help maintain your trees and beautify your lawn!
+                        to see how we can help maintain your trees and beautify your lawn!
                     </p>
                     <a title="Call LFTGU Lawn care Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
                         href="tel:+18138093317">
@@ -274,7 +274,7 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br> 30168
+                            Lakeland, FL <br> 33810
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
                                 target="_blank"
